Made changes based on recommendations from the lint tool, and removed unused strings. Preferences has been renamed to Settings. This also no longer appears in the ActionBar on Honeycomb and above, following recommendations at the Android design site. Changed Settings display based on these recommendations also. Made plenty of changes in BusStopDatabase and SettingsDatabase to follow good practices and possible performance enhancements.